Update repository url in package.json and bump version to 3.0.10

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-nativeaudio",
-  "version": "3.0.9",
+  "version": "3.0.10",
   "description": "Cordova/PhoneGap Plugin for low latency Native Audio Playback, must have for HTML5 games",
   "cordova": {
     "id": "cordova-plugin-nativeaudio",
@@ -11,10 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/floatinghotpot/cordova-plugin-nativeaudio.git"
+    "url": "https://github.com/rideosoftware/cordova-plugin-nativeaudio.git"
   },
   "bugs": {
-    "url": "https://github.com/floatinghotpot/cordova-plugin-nativeaudio/issues"
+    "url": "https://github.com/rideosoftware/cordova-plugin-nativeaudio/issues"
   },
   "keywords": [
     "cordova",
@@ -29,6 +29,9 @@
     "name": "Andrew Trice"
   },
   "contributors": [{
+    "name": "Rideo Software",
+    "email": "it@rideosoftware.com"
+  }{
     "name": "Andrew Trice"
   },{
     "name": "Raymond Xie",
